# ETD-LA

./: CITATION.cff  README.md  pyproject.toml
src/etd_la/: jacobi_iteration.py  main.py  matrix_inverse.py  matrix_solvers.py  plotting.py  temperature_solver.py
