[tool.poetry]
name = "etd-la"
version = "0.1.0"
description = ""
authors = ["salastro <salah2112004@gmail.com>"]
readme = "README.md"
packages = [{include = "etd_la", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
